Corrected render.yaml: Changed database type to 'postgres' for blueprint compatibility

--- a/research_assistant/templates/base.html
+++ b/research_assistant/templates/base.html
@@ -6,15 +6,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI Bibliographer</title>
-    <link rel="icon" href="{% static 'research_assistant/favicon.png' %}" type="image/png">
-    <link rel="stylesheet" href="{% static 'research_assistant/style.css' %}">
+    {# --- CHANGES START HERE --- #}
+    <link rel="icon" href="{% static 'favicon.png' %}" type="image/png">
+    <link rel="stylesheet" href="{% static 'style.css' %}">
+    {# --- CHANGES END HERE --- #}
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <div class="container">
         <aside class="sidebar">
             <div class="sidebar-header">
-                <img src="{% static 'research_assistant/logo.svg' %}" alt="Logo" class="logo">
+                {# --- CHANGES START HERE --- #}
+                <img src="{% static 'logo.svg' %}" alt="Logo" class="logo">
+                {# --- CHANGES END HERE --- #}
                 <h2>AI Bibliographer</h2>
             </div>
             <hr>
