--- a/research_assistant/templates/base.html
+++ b/research_assistant/templates/base.html
@@ -6,15 +6,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI Bibliographer</title>
-    <link rel="icon" href="{% static 'favicon.png' %}" type="image/png"> {# CHANGED: Removed 'research_assistant/' #}
-    <link rel="stylesheet" href="{% static 'style.css' %}"> {# CHANGED: Removed 'research_assistant/' #}
+    <link rel="icon" href="{% static 'research_assistant/favicon.png' %}" type="image/png"> {# CHANGED: Removed 'research_assistant/' #}
+    <link rel="stylesheet" href="{% static 'research_assistant/style.css' %}"> {# CHANGED: Removed 'research_assistant/' #}
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <div class="container">
         <aside class="sidebar">
             <div class="sidebar-header">
-                <img src="{% static 'logo.svg' %}" alt="Logo" class="logo"> {# CHANGED: Removed 'research_assistant/' #}
+                <img src="{% static 'research_assistant/logo.svg' %}" alt="Logo" class="logo"> {# CHANGED: Removed 'research_assistant/' #}
                 <h2>AI Bibliographer</h2>
             </div>
             <hr>
@@ -107,3 +107,4 @@
     {# GLOBAL Loading Overlay HTML - REMOVED #}
 </body>
 </html>
+
